# kuro-forum

./: .gitignore  Cargo.toml  README.md  conf_example.yaml  init_kuro_forum_db.sql
src/: main.rs
src/cache/: mod.rs  user.rs
src/common/: http_msg.rs  mod.rs
src/config/: local_config.rs  mod.rs
src/constant/: base_error.rs  email.rs  http_error.rs  mod.rs
src/controller/: forum.rs  mod.rs  user.rs
src/dao/: user.rs
src/datasource/: mod.rs  sqlite.rs
src/entity/: user.rs
src/middleware/: auth.rs  log.rs  mod.rs
src/model/: user.rs
src/schema/: mod.rs
src/service/: email.rs  error.rs  mod.rs  user.rs
src/util/: dbutil.rs  email.rs  encrypt.rs  mod.rs  rand.rs  template.rs  time.rs
src/util/template/: email.toml
