[package]
name = "kuro-forum"
version = "0.1.0"
edition = "2021"
publish = ["crates-io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono"] }
tracing-appender = "0.2"
color-eyre = "0.6"
chrono = "0.4"
diesel = { version = "2", features = ["sqlite", "r2d2"] }
md-5 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"
paste = "1.0.14"
actix-cors = "0.7.0"
futures-util = "0.3.30"
moka = { version = "0.12.7", features = ["sync"] }
jsonwebtoken = "9.3.0"
time = "0.3.36"
actix-http = "3.6.0"
lettre = "0.11.7"
handlebars = "5.1.2"
toml = "0.8.13"
scopeguard = "1.2.0"
